manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greentube-svc
spec:
  selector:
    app: greentube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
